Refactor configuration, so each application can specify its own JSON decoding.