@@ -1,7 +1,7 @@
 package nl.bertriksikken.ttn;
 
 import java.time.Duration;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 import com.fasterxml.jackson.annotation.JsonAutoDetect;
@@ -21,7 +21,23 @@ public final class TtnConfig {
     private int identityServerTimeout = 30;
 
     @JsonProperty("apps")
-    private List<TtnAppConfig> apps = Arrays.asList(new TtnAppConfig());
+    private List<TtnAppConfig> apps = new ArrayList<>();
+
+    // default no-arg constructor
+    public TtnConfig() {
+    }
+
+    // copy constructor
+    public TtnConfig(TtnConfig original) {
+        this.mqttUrl = original.mqttUrl;
+        this.identityServerUrl = original.identityServerUrl;
+        this.identityServerTimeout = original.identityServerTimeout;
+        this.apps = List.copyOf(original.apps);
+    }
+
+    public void addApp(TtnAppConfig app) {
+        apps.add(app);
+    }
 
     public String getMqttUrl() {
         return mqttUrl;
